# packet-modern-cpp-11-14-17

./: README.md
01_lambda_function/: 00_cpp_version_check.cpp  01_simple_lambda_comparison.cpp  02_lambda_feature_comparison.cpp  03_lambda_evolution_demo.cpp  04_lambda_replace_bind  04_lambda_replace_bind.cpp  CMAKE_README.md  CMakeLists.txt  README.md
01_lambda_function/documentation/: LAMBDA_GUIDE.md  LAMBDA_VS_BIND.md
01_lambda_function/output_record/: 00_cpp_version_check_cpp20.txt  01_simple_lambda_comparison_cpp20.txt  02_lambda_feature_comparison_cpp20.txt  03_lambda_evolution_demo_cpp20.txt  04_lambda_replace_bind.txt
